--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-	"name": "reframe-testing",
-	"scripts": {
-		"watch": "npx shadow-cljs watch app browser-test karma-test",
-		"release": "npx shadow-cljs release app",
-		"build-report": "npx shadow-cljs run shadow.cljs.build-report app target/build-report.html"
-	},
-	"dependencies": {
-		"highlight.js": "10.7.1",
-		"react": "17.0.1",
-		"react-dom": "17.0.1"
-	},
-	"devDependencies": {
-		"shadow-cljs": "2.12.5"
-	}
+    "homepage": "https://github.com/BuddhiLW/reagent-reframing",
+    "name": "reframe-testing",
+    "scripts": {
+	"predeploy": "npm run build",
+	"deply": "gh-pages -d build",
+	"watch": "npx shadow-cljs watch app browser-test karma-test",
+	"release": "npx shadow-cljs release app",
+	"build-report": "npx shadow-cljs run shadow.cljs.build-report app target/build-report.html"
+    },
+    "dependencies": {
+	"highlight.js": "10.7.1",
+	"react": "17.0.1",
+	"react-dom": "17.0.1"
+    },
+    "devDependencies": {
+	"gh-pages": "^3.2.0",
+	"shadow-cljs": "2.12.5"
+    }
 }
